[package]
name = "stamd"
version = "0.1.0"
edition = "2021"
authors = ["Maarten van Gompel <proycon@anaproy.nl>"]
description = "Webservice for working with stand-off annotations on text (STAM)"
documentation = "https://github.com/annotation/stamd"
homepage = "https://annotation.github.io/stam"
include = ["src/**/*","tests/**/*", "LICENSE", "README.md"]
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/annotation/stamd"
keywords = [ "text-processing", "annotation", "linguistics", "standoff", "nlp"]

[dependencies]
axum = "0.7.7"
clap = { version = "4.5.20", features = ["derive"] }
stam = "0.16.4"
stam-tools = "0.9.1"
tokio = { version = "1.41.0", features = ["macros","rt-multi-thread"] }
