[package]
name = "stamd"
version = "0.1.0"
edition = "2021"
authors = ["Maarten van Gompel <proycon@anaproy.nl>"]
description = "Webservice for working with stand-off annotations on text (STAM)"
documentation = "https://github.com/annotation/stamd"
homepage = "https://annotation.github.io/stam"
include = ["src/**/*","tests/**/*", "LICENSE", "README.md"]
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/annotation/stamd"
keywords = [ "text-processing", "annotation", "linguistics", "standoff", "nlp"]

[dependencies]
axum = "0.7.7"
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
stam = "0.16.4"
stam-tools = "0.9.1"
tokio = { version = "1.41.0", features = ["macros","rt-multi-thread","signal"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features= ["trace", "normalize-path"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utoipa = { version = "5.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum", "vendored"] }
